2016-09-06  Deniz Yuret  <dyuret@ku.edu.tr>

	* DONE:
	# mnist2d: cpu support, in general for all of Knet; test with v0.4 and v0.5
	# mnist2d: cpu/gpu, Float16,32,64 options

	* TODO8:
	# mnist2d: update documentation
	# mnist4d
	# charlm
	# examples/README
	# try to measure back functions one by one as well for gpu profiling.
	# make BLK,THR dependent on the input size? may improve final sum which is only 10x100 in this example.
	# finish cudnn, curand etc. if possible eliminate dependence on them.
	# mnist2d: implement efficient softmax -- seems ok for now.
	# extend benchmark tests to cover all combinations of 10,100,1000 dimensions.
	# load/save using JLD
	# mnist2d: sparse arrays
	# mnist2d: sampling gradcheck

2016-09-04  Deniz Yuret  <dyuret@ku.edu.tr>

	* DONE:
	# mnist2d: add hidden option
	# mnist2d: comparison with knet7

2016-08-29  Deniz Yuret  <dyuret@ku.edu.tr>

	* DONE:
	# profile AutoGrad more, figure out memory problem, good look at unbroadcast. memory use with/without forw.  closures?
	# make AutoGrad completely generic?
	# tmpfree is dangerous, user visible variables from a=b*c may be overwritten!
	# figure out why forw adds 0.38
	# determine and minimize autograd overhead.

2016-08-28  Deniz Yuret  <dyuret@ku.edu.tr>

	* DONE:
	# move cuda -> src, src -> src7
	# should we introduce our own CudaArray type?
	# define KnetArray. (KA) use instead of CudaArray.
	# test cuda version compare with af.
	# we could just support 0,1,2 dims or 0,1,N dims for map and reduce.
	# finish cuda2arg, cublas
	# need to write cuda21 vector reductions before full AutoGrad test.

	* ArrayFire: gave up on it, my code is faster:
	# can we get AF kernels to dump out?
	# try c++ ArrayFire mnist example?
	# will arrayfire memory management still work with rnns?
	# eventually look at arrayfire convolution.
	# thrust and tensorflow also opensource.

	* JIT: could look at this if libknet8 gets too big: