@@ -3,12 +3,14 @@
 	* DONE:
 	# mnist2d: cpu support, in general for all of Knet; test with v0.4 and v0.5
 	# mnist2d: cpu/gpu, Float16,32,64 options
+	# mnist2d: update documentation
 
 	* TODO8:
-	# mnist2d: update documentation
 	# mnist4d
 	# charlm
-	# examples/README
+	# write examples/README
+	# put info about additional packages for examples and gpu in README
+	# 
 	# try to measure back functions one by one as well for gpu profiling.
 	# make BLK,THR dependent on the input size? may improve final sum which is only 10x100 in this example.
 	# finish cudnn, curand etc. if possible eliminate dependence on them.
